[gd_scene load_steps=13 format=3 uid="uid://camp18q8ye8gj"]

[ext_resource type="Script" uid="uid://bugmtr67e3qx1" path="res://architecture/components/door_2d.gd" id="1_lmq0e"]
[ext_resource type="Texture2D" uid="uid://dw6ajs8sxti6l" path="res://resources/sprites/architecture/components/doors_sprite.png" id="2_yc1n7"]
[ext_resource type="Texture2D" uid="uid://c72ct2insxyd7" path="res://resources/sprites/marks_0.png" id="3_426lo"]
[ext_resource type="Script" uid="uid://ddee7be1iarx6" path="res://common/isometric_block.gd" id="4_4fwb3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o5v1q"]
atlas = ExtResource("2_yc1n7")
region = Rect2(82, 79, 12, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcl1s"]
atlas = ExtResource("2_yc1n7")
region = Rect2(108, 0, 32, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_4brj5"]
atlas = ExtResource("2_yc1n7")
region = Rect2(74, 0, 32, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_crkvq"]
atlas = ExtResource("2_yc1n7")
region = Rect2(0, 39, 72, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_43tr1"]
atlas = ExtResource("2_yc1n7")
region = Rect2(110, 79, 12, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_mi6hl"]
atlas = ExtResource("2_yc1n7")
region = Rect2(34, 78, 32, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbk66"]
atlas = ExtResource("3_426lo")
region = Rect2(64, 0, 64, 32)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jbk66"]
height = 60.0

[node name="Door SE" type="Area2D" node_paths=PackedStringArray("open_sprites", "close_sprites")]
y_sort_enabled = true
script = ExtResource("1_lmq0e")
open_sprites = [NodePath("door/door0_open"), NodePath("door/door1_open")]
close_sprites = [NodePath("door/door0_close"), NodePath("door/door1_close")]

[node name="door" type="Node2D" parent="."]
y_sort_enabled = true
position = Vector2(-22, -11)

[node name="frame0" type="Sprite2D" parent="door"]
position = Vector2(60, -3)
texture = SubResource("AtlasTexture_o5v1q")
offset = Vector2(0, -44.5)

[node name="door0_close" type="Sprite2D" parent="door"]
position = Vector2(44, 0)
texture = SubResource("AtlasTexture_tcl1s")
offset = Vector2(0, -38.5)

[node name="door0_open" type="Sprite2D" parent="door"]
visible = false
position = Vector2(68, 0)
texture = SubResource("AtlasTexture_4brj5")
offset = Vector2(0, -38.5)

[node name="door1_close" type="Sprite2D" parent="door"]
position = Vector2(16, 14)
texture = SubResource("AtlasTexture_tcl1s")
offset = Vector2(0, -38.5)

[node name="door1_open" type="Sprite2D" parent="door"]
visible = false
position = Vector2(16, 16)
texture = SubResource("AtlasTexture_4brj5")
offset = Vector2(0, -28.5)

[node name="frame1" type="Sprite2D" parent="door"]
position = Vector2(0, 17)
texture = SubResource("AtlasTexture_o5v1q")
offset = Vector2(0, -34.5)

[node name="top" type="Sprite2D" parent="door/frame1"]
position = Vector2(30, -80)
texture = SubResource("AtlasTexture_crkvq")

[node name="Node2D" type="Node2D" parent="door/frame1"]
position = Vector2(0, -16)

[node name="top_panel" type="Node2D" parent="door/frame1/Node2D"]
y_sort_enabled = true
position = Vector2(0, -65)

[node name="frame0" type="Sprite2D" parent="door/frame1/Node2D/top_panel"]
position = Vector2(60, -12)
texture = SubResource("AtlasTexture_43tr1")
offset = Vector2(0, -18)

[node name="door0_close" type="Sprite2D" parent="door/frame1/Node2D/top_panel"]
position = Vector2(44, 0)
texture = SubResource("AtlasTexture_mi6hl")
offset = Vector2(0, -22.5)

[node name="door1_close" type="Sprite2D" parent="door/frame1/Node2D/top_panel"]
position = Vector2(16, 14)
texture = SubResource("AtlasTexture_mi6hl")
offset = Vector2(0, -22.5)

[node name="frame1" type="Sprite2D" parent="door/frame1/Node2D/top_panel"]
position = Vector2(0, 16.5)
texture = SubResource("AtlasTexture_43tr1")
offset = Vector2(0, -17.5)

[node name="top" type="Sprite2D" parent="door/frame1/Node2D/top_panel/frame1"]
position = Vector2(30, -47.5)
texture = SubResource("AtlasTexture_crkvq")

[node name="reference type" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_jbk66")
script = ExtResource("4_4fwb3")
only_shown_in_editor = true

[node name="reference type2" type="Sprite2D" parent="."]
position = Vector2(32, -16)
texture = SubResource("AtlasTexture_jbk66")
script = ExtResource("4_4fwb3")
only_shown_in_editor = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(14.000001, -10.999999)
rotation = 1.1082841
shape = SubResource("CapsuleShape2D_jbk66")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
